<resources>
    <string name="app_name">walksforwalks</string>
    <string name="test_1">Daniel is testing this </string>
    <string name="test_2">Ralph is testing this </string>
    <string name="main_logIn_button">Log-In</string>

    /** Everything in Activity Register User is below **/
    <string name="register_user_button">Register</string>
    <string name="register_user_name">Full Name</string>
    <string name="register_user_email">E-mail</string>
    <string name="register_user_password">Password</string>
    <string name="register_pet_breed">Pet Breed</string>
    <string name="register_pet_name">Pet Name</string>
    <string name="register_postal_code">Postal Code</string>
    <string name="register_phone_number">Phone Number</string>
    /*** Everything in Activity Register User is above ***/

    <string name="main_email">E-mail</string>
    <string name="main_password">Password</string>
    <string name="main_logIn">Log-In</string>
    <string name="main_register">Register</string>
    <string name="drawer_profile">profile</string>
    <string name="nav_help">help</string>
    <string name="nav_contact">contact</string>
    <string name="nav_support">support</string>
    <string name="nav_logout">logout</string>
    <string name="nav_profile">profile</string>
    <string name="nav_open_drawer">Open Navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="user_name">name</string>
    <string name="placeholder_img">star</string>
    <string name="rV_pet_name">pet name</string>
    <string name="rV_pet_breed">pet breed</string>
    <string name="user_phone">phone #</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_profile_btn">EDIT PROFILE</string>
    <string name="profile_frag_pets">PETS</string>
    <string name="profile_frag_stats">STATS</string>
    <string name="person">PERSON</string>
    <string name="main">main</string>
    <string name="add_image">ADD IMAGE</string>
    <string name="message_button_send">Send</string>
    <string name="pet_name">pet_name</string>
    <string name="nav_edit">edit</string>
    <string name="save_btn">SAVE</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="new_name">New Name</string>
    <string name="new_pet_name">New Pet Name</string>
    <string name="new_pet_breed">New Pet Breed</string>
    <string name="new_postal_code">New Postal Code</string>
    <string name="new_phone_number">New Phone Number</string>
    <string name="home">Home</string>
    <string name="recycler_received_message">Message:</string>
    <string name="rating_layout_submit_btn">Submit</string>
    <string name="rate_person">Click once to contact this person, hold down to leave a review</string>
    <string name="activity_message_text">Type your message here</string>
</resources>