<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterUser">

    <EditText
        android:id="@+id/editText_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/register_user_name"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="39dp" />

    <EditText
        android:id="@+id/editText_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/register_user_email" />

    <EditText
        android:id="@+id/editText_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/register_user_password" />

    <EditText
        android:id="@+id/editText_register_pet_breed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/register_pet_breed" />

    <EditText
        android:id="@+id/editText_register_pet_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/register_pet_name" />


    <EditText
        android:id="@+id/editText_postal_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPostalAddress"
        android:hint="@string/register_postal_code" />


    <EditText
        android:id="@+id/editText_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/register_phone_number" />




    <Button
        android:id="@+id/button_register_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_user_button" />

    <ProgressBar
        android:id="@+id/progressBar_register_user"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>

</LinearLayout>