<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#00FFFFFF">

    <androidx.cardview.widget.CardView
        android:layout_width="336dp"
        android:layout_height="508dp"
        app:cardBackgroundColor="#81D4FA"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:contentPadding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#CDFFFFFF"
            android:backgroundTint="#FFFFFF"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="5dp">


            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iV_dialog"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginVertical="5dp"
                android:contentDescription="@string/profile_pic"
                app:shapeAppearanceOverlay="@style/circleImageViewStyle"
                tools:srcCompat="@tools:sample/avatars" />

            <EditText
                android:id="@+id/eT_dialog_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:autofillHints="a"
                android:ems="10"
                android:hint="@string/new_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/eT_dialog_petName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/new_pet_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/eT_dialog_pet_breed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/new_pet_breed"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/eT_dialog_postal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/new_postal_code"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/eT_dialog_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/new_phone_number"
                android:inputType="phone" />

            <Button
                android:id="@+id/btn_dialog_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/reg_btn_bg"
                android:text="@string/save_btn" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>