<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="@color/reg_bg"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="355dp"
        android:layout_height="525dp"
        app:cardCornerRadius="10dp"
        android:padding="5dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#FFFFFF"
            android:backgroundTint="@color/reg_card_bg"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="5dp">

            <ImageView
                android:id="@+id/image_recyler_profile"
                android:layout_width="match_parent"
                android:layout_height="143dp"
                android:layout_marginVertical="15dp"
                app:srcCompat="@drawable/walksforwalks" />

            <ProgressBar
                android:id="@+id/progressBar_main_login"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <EditText
                android:id="@+id/editText_login_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/icons8_new_post_24"
                android:drawablePadding="5dp"
                android:drawableTint="@color/reg_btn_bg"
                android:ems="10"
                android:hint="@string/register_user_email"
                android:inputType="textEmailAddress"
                android:textColor="@color/reg_eT_text" />

            <EditText
                android:id="@+id/editText_login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/white"
                android:drawableStart="@drawable/icons8_eye_24"
                android:drawablePadding="5dp"
                android:drawableTint="@color/reg_btn_bg"
                android:ems="10"
                android:hint="@string/register_user_password"
                android:inputType="textPassword"
                android:textColor="@color/reg_eT_text" />

            <Button
                android:id="@+id/button_login_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:backgroundTint="@color/reg_btn_bg"
                android:text="@string/main_logIn" />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/textView_login_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_register"
                    android:textColor="@color/reg_eT_text" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>