<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="415dp"
        android:layout_height="281dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034">

        <ImageView
            android:id="@+id/iV_profile_frag_profilePic"
            android:layout_width="match_parent"
            android:layout_height="213dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tV_profile_frag_name"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:gravity="center"
            android:text="@string/user_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="396dp"
        android:layout_height="203dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.586">

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_frag_stat_card"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iV_profile_frag_stats_card"
                    android:layout_width="120dp"
                    android:layout_height="145dp"
                    tools:srcCompat="@drawable/graph" />

                <TextView
                    android:id="@+id/tV_profile_frag_stats"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_frag_stats"
                    android:textAlignment="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="12dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_frag_person_card"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iV_profile_frag_person_card"
                    android:layout_width="116dp"
                    android:layout_height="142dp"
                    tools:srcCompat="@drawable/person" />

                <TextView
                    android:id="@+id/tV_profile_frag_person"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/person"
                    android:textAlignment="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <Space
            android:layout_width="11dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <androidx.cardview.widget.CardView
            android:id="@+id/profile_frag_pets_card"
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iV_profile_frag_pets_card"
                    android:layout_width="123dp"
                    android:layout_height="144dp"
                    tools:srcCompat="@drawable/dog_paw" />

                <TextView
                    android:id="@+id/tV_profile_frag_pets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_frag_pets"
                    android:textAlignment="center" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:text="@string/edit_profile_btn"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
</androidx.constraintlayout.widget.ConstraintLayout>