<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/deep_green_grass"
    tools:context=".ProfileActivity">

    <androidx.drawerlayout.widget.DrawerLayout

        android:id="@+id/drawer_layout_profile"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include
                android:id="@+id/toolbar_profile"
                layout="@layout/toolbar_profile" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.496"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.467">

                    <com.google.android.material.imageview.ShapeableImageView

                        android:id="@+id/iV_profile_profilePic"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        app:shapeAppearanceOverlay="@style/circleImageViewStyle"
                        tools:srcCompat="@tools:sample/avatars" />

                    <TextView
                        android:id="@+id/tV_profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginVertical="5dp"
                        android:background="@drawable/rounded_corners"
                        android:backgroundTint="@color/white"
                        android:gravity="center"
                        android:paddingHorizontal="20dp"
                        android:text="@string/user_name"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/tV_profile_pet_name"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginVertical="5dp"
                        android:background="@drawable/rounded_corners"
                        android:backgroundTint="@color/white"
                        android:gravity="center"
                        android:paddingHorizontal="20dp"
                        android:text="@string/pet_name"
                        android:textAlignment="center"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
                        android:textColor="@color/black" />

                    <Button
                        android:id="@+id/btn_profile_edit"
                        android:layout_width="wrap_content"
                        android:layout_height="61dp"
                        android:layout_margin="10dp"
                        android:backgroundTint="@color/reg_btn_bg"
                        android:text="@string/edit_profile_btn"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
                        />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view_profile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#E6FFFFFF"
            android:backgroundTint="@color/white"
            app:headerLayout="@layout/nav_header"
            app:itemIconTint="@color/reg_btn_bg"
            app:itemTextColor="@color/reg_btn_bg"
            app:menu="@menu/menu_nav_profile" />

    </androidx.drawerlayout.widget.DrawerLayout>
</androidx.constraintlayout.widget.ConstraintLayout>